--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,8 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!-- Don't delete the meta-data below.
-             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+      
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
@@ -46,8 +45,12 @@
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
+
+        </intent>
+        <intent>
             <action android:name="android.speech.RecognitionService" />
 
         </intent>
+        
     </queries>
 </manifest>
