--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   http: ^1.3.0
   translator: ^1.0.3+1
   speech_to_text: ^7.0.0
+  language_detector: ^1.0.1
+  image_picker: ^1.1.2
+  
 
 dev_dependencies:
   flutter_test:
