--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,16 @@ dependencies:
   shared_preferences: ^2.5.1
   lucide_icons: ^0.257.0
   pinput: ^3.0.1
-  http: ^1.3.0
+  http: ^1.1.0
   translator: ^1.0.3+1
   speech_to_text: ^7.0.0
-  language_detector: ^1.0.1
+  language_detector: 1.0.1
   image_picker: ^1.1.2
+  flutter_background_service: ^5.1.0
+  record: ^5.2.1
+  porcupine_flutter: ^3.0.4
+  flutter_foreground_task: ^8.17.0
+  permission_handler: ^11.4.0
   
 
 dev_dependencies:
@@ -67,6 +72,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets\hey-todo_en_android_v3_0_0.ppn
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
